AUTOMAKE_OPTIONS = foreign dist-bzip2
EXTRA_DIST = saved_svn_version.txt
bin_PROGRAMS = mc4
mc4_SOURCES = DataSink/DataSink.cpp\
	Parser/Token.cpp\
	Parser/TokenStream.cpp\
	Parser/FileStream.cpp\
	Parser/AbsFileStream.cpp\
	Utilities/LogicalError.cpp\
	Utilities/ClassicException.cpp\
	Utilities/ParseError.cpp\
	mc4.cpp\
	HaloFinder/r1/CosmoHaloFinderP.cxx\
	HaloFinder/r1/CosmoHaloFinder.cxx\
	HaloFinder/r1/HaloProperties.cxx\
	../initializer/Cosmology.cpp\
	../initializer/Initializer.cpp\
	../initializer/IPPLInitializer.cpp\
	../initializer/MT_Random.cpp\
	../initializer/DataBase.cpp\
	../initializer/Parallelization.cpp\
	../initializer/InputParser.cpp\
	../initializer/PerfMon.c
